--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "start": "babel-node",
     "build": "babel src/ -d lib/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run build && mocha --compilers js:babel-register --recursive test/"
   },
   "keywords": [],
   "author": "airtoxin <airtoxin@icloud.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.3.17",
-    "babel-preset-es2015": "^6.3.13"
-  }
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "mocha": "^2.3.4"
+  },
+  "dependencies": {}
 }
